--- a/covid19usa.html
+++ b/covid19usa.html
@@ -59,6 +59,8 @@
 <script src=USAData_70.js></script>
 <script src=USAData_71.js></script>
 <script src=USAData_72.js></script>
+<script src=USAData_73.js></script>
+<script src=USAData_74.js></script>
 
 <script>
 
