--- a/covid19int.html
+++ b/covid19int.html
@@ -30,81 +30,81 @@
 
 </body>
 
-<script src=Ext/IntData_0.js></script>
-<script src=Ext/IntData_1.js></script>
-<script src=Ext/IntData_2.js></script>
-<script src=Ext/IntData_3.js></script>
-<script src=Ext/IntData_4.js></script>
-<script src=Ext/IntData_5.js></script>
-<script src=Ext/IntData_6.js></script>
-<script src=Ext/IntData_7.js></script>
-<script src=Ext/IntData_8.js></script>
-<script src=Ext/IntData_9.js></script>
-<script src=Ext/IntData_10.js></script>
-<script src=Ext/IntData_11.js></script>
-<script src=Ext/IntData_12.js></script>
-<script src=Ext/IntData_13.js></script>
-<script src=Ext/IntData_14.js></script>
-<script src=Ext/IntData_15.js></script>
-<script src=Ext/IntData_16.js></script>
-<script src=Ext/IntData_17.js></script>
-<script src=Ext/IntData_18.js></script>
-<script src=Ext/IntData_19.js></script>
-<script src=Ext/IntData_20.js></script>
-<script src=Ext/IntData_21.js></script>
-<script src=Ext/IntData_22.js></script>
-<script src=Ext/IntData_23.js></script>
-<script src=Ext/IntData_24.js></script>
-<script src=Ext/IntData_25.js></script>
-<script src=Ext/IntData_26.js></script>
-<script src=Ext/IntData_27.js></script>
-<script src=Ext/IntData_28.js></script>
-<script src=Ext/IntData_29.js></script>
-<script src=Ext/IntData_30.js></script>
-<script src=Ext/IntData_31.js></script>
-<script src=Ext/IntData_32.js></script>
-<script src=Ext/IntData_33.js></script>
-<script src=Ext/IntData_34.js></script>
-<script src=Ext/IntData_35.js></script>
-<script src=Ext/IntData_36.js></script>
-<script src=Ext/IntData_37.js></script>
-<script src=Ext/IntData_38.js></script>
-<script src=Ext/IntData_39.js></script>
-<script src=Ext/IntData_40.js></script>
-<script src=Ext/IntData_41.js></script>
-<script src=Ext/IntData_42.js></script>
-<script src=Ext/IntData_43.js></script>
-<script src=Ext/IntData_44.js></script>
-<script src=Ext/IntData_45.js></script>
-<script src=Ext/IntData_46.js></script>
-<script src=Ext/IntData_47.js></script>
-<script src=Ext/IntData_48.js></script>
-<script src=Ext/IntData_49.js></script>
-<script src=Ext/IntData_50.js></script>
-<script src=Ext/IntData_51.js></script>
-<script src=Ext/IntData_52.js></script>
-<script src=Ext/IntData_53.js></script>
-<script src=Ext/IntData_54.js></script>
-<script src=Ext/IntData_55.js></script>
-<script src=Ext/IntData_56.js></script>
-<script src=Ext/IntData_57.js></script>
-<script src=Ext/IntData_58.js></script>
-<script src=Ext/IntData_59.js></script>
-<script src=Ext/IntData_60.js></script>
-<script src=Ext/IntData_61.js></script>
-<script src=Ext/IntData_62.js></script>
-<script src=Ext/IntData_63.js></script>
-<script src=Ext/IntData_64.js></script>
-<script src=Ext/IntData_65.js></script>
-<script src=Ext/IntData_66.js></script>
-<script src=Ext/IntData_67.js></script>
-<script src=Ext/IntData_68.js></script>
-<script src=Ext/IntData_69.js></script>
-<script src=Ext/IntData_70.js></script>
-<script src=Ext/IntData_71.js></script>
-<script src=Ext/IntData_72.js></script>
-<script src=Ext/IntData_73.js></script>
-<script src=Ext/IntData_74.js></script>
+<script src=IntData_0.js></script>
+<script src=IntData_1.js></script>
+<script src=IntData_2.js></script>
+<script src=IntData_3.js></script>
+<script src=IntData_4.js></script>
+<script src=IntData_5.js></script>
+<script src=IntData_6.js></script>
+<script src=IntData_7.js></script>
+<script src=IntData_8.js></script>
+<script src=IntData_9.js></script>
+<script src=IntData_10.js></script>
+<script src=IntData_11.js></script>
+<script src=IntData_12.js></script>
+<script src=IntData_13.js></script>
+<script src=IntData_14.js></script>
+<script src=IntData_15.js></script>
+<script src=IntData_16.js></script>
+<script src=IntData_17.js></script>
+<script src=IntData_18.js></script>
+<script src=IntData_19.js></script>
+<script src=IntData_20.js></script>
+<script src=IntData_21.js></script>
+<script src=IntData_22.js></script>
+<script src=IntData_23.js></script>
+<script src=IntData_24.js></script>
+<script src=IntData_25.js></script>
+<script src=IntData_26.js></script>
+<script src=IntData_27.js></script>
+<script src=IntData_28.js></script>
+<script src=IntData_29.js></script>
+<script src=IntData_30.js></script>
+<script src=IntData_31.js></script>
+<script src=IntData_32.js></script>
+<script src=IntData_33.js></script>
+<script src=IntData_34.js></script>
+<script src=IntData_35.js></script>
+<script src=IntData_36.js></script>
+<script src=IntData_37.js></script>
+<script src=IntData_38.js></script>
+<script src=IntData_39.js></script>
+<script src=IntData_40.js></script>
+<script src=IntData_41.js></script>
+<script src=IntData_42.js></script>
+<script src=IntData_43.js></script>
+<script src=IntData_44.js></script>
+<script src=IntData_45.js></script>
+<script src=IntData_46.js></script>
+<script src=IntData_47.js></script>
+<script src=IntData_48.js></script>
+<script src=IntData_49.js></script>
+<script src=IntData_50.js></script>
+<script src=IntData_51.js></script>
+<script src=IntData_52.js></script>
+<script src=IntData_53.js></script>
+<script src=IntData_54.js></script>
+<script src=IntData_55.js></script>
+<script src=IntData_56.js></script>
+<script src=IntData_57.js></script>
+<script src=IntData_58.js></script>
+<script src=IntData_59.js></script>
+<script src=IntData_60.js></script>
+<script src=IntData_61.js></script>
+<script src=IntData_62.js></script>
+<script src=IntData_63.js></script>
+<script src=IntData_64.js></script>
+<script src=IntData_65.js></script>
+<script src=IntData_66.js></script>
+<script src=IntData_67.js></script>
+<script src=IntData_68.js></script>
+<script src=IntData_69.js></script>
+<script src=IntData_70.js></script>
+<script src=IntData_71.js></script>
+<script src=IntData_72.js></script>
+<script src=IntData_73.js></script>
+<script src=IntData_74.js></script>
 
 <script>
 
