--- a/covid19int.html
+++ b/covid19int.html
@@ -105,6 +105,7 @@
 <script src=IntData_72.js></script>
 <script src=IntData_73.js></script>
 <script src=IntData_74.js></script>
+<script src=IntData_75.js></script>
 
 <script>
 
