--- a/covid19state.html
+++ b/covid19state.html
@@ -48,6 +48,7 @@
 <script src=USAData_72.js></script>
 <script src=USAData_73.js></script>
 <script src=USAData_74.js></script>
+<script src=USAData_75.js></script>
 
 <script>
 
