--- a/covid19usa.html
+++ b/covid19usa.html
@@ -61,6 +61,7 @@
 <script src=USAData_72.js></script>
 <script src=USAData_73.js></script>
 <script src=USAData_74.js></script>
+<script src=USAData_75.js></script>
 
 <script>
 
