--- a/covid19int.html
+++ b/covid19int.html
@@ -106,6 +106,7 @@
 <script src=IntData_73.js></script>
 <script src=IntData_74.js></script>
 <script src=IntData_75.js></script>
+<script src=IntData_76.js></script>
 
 <script>
 
