--- a/covid19state.html
+++ b/covid19state.html
@@ -49,6 +49,7 @@
 <script src=USAData_73.js></script>
 <script src=USAData_74.js></script>
 <script src=USAData_75.js></script>
+<script src=USAData_76.js></script>
 
 <script>
 
