--- a/covid19usa.html
+++ b/covid19usa.html
@@ -62,6 +62,7 @@
 <script src=USAData_73.js></script>
 <script src=USAData_74.js></script>
 <script src=USAData_75.js></script>
+<script src=USAData_76.js></script>
 
 <script>
 
