Updated data to 06/07/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -107,6 +107,7 @@
 <script src=IntData_74.js></script>
 <script src=IntData_75.js></script>
 <script src=IntData_76.js></script>
+<script src=IntData_77.js></script>
 
 <script>
 
