--- a/covid19state.html
+++ b/covid19state.html
@@ -50,6 +50,7 @@
 <script src=USAData_74.js></script>
 <script src=USAData_75.js></script>
 <script src=USAData_76.js></script>
+<script src=USAData_77.js></script>
 
 <script>
 
