--- a/covid19usa.html
+++ b/covid19usa.html
@@ -63,6 +63,7 @@
 <script src=USAData_74.js></script>
 <script src=USAData_75.js></script>
 <script src=USAData_76.js></script>
+<script src=USAData_77.js></script>
 
 <script>
 
