Updated data to 06/08/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -108,6 +108,7 @@
 <script src=IntData_75.js></script>
 <script src=IntData_76.js></script>
 <script src=IntData_77.js></script>
+<script src=IntData_78.js></script>
 
 <script>
 
