--- a/covid19state.html
+++ b/covid19state.html
@@ -51,6 +51,7 @@
 <script src=USAData_75.js></script>
 <script src=USAData_76.js></script>
 <script src=USAData_77.js></script>
+<script src=USAData_78.js></script>
 
 <script>
 
