Updated data to 06/09/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -109,6 +109,7 @@
 <script src=IntData_76.js></script>
 <script src=IntData_77.js></script>
 <script src=IntData_78.js></script>
+<script src=IntData_79.js></script>
 
 <script>
 
