--- a/covid19state.html
+++ b/covid19state.html
@@ -52,6 +52,7 @@
 <script src=USAData_76.js></script>
 <script src=USAData_77.js></script>
 <script src=USAData_78.js></script>
+<script src=USAData_79.js></script>
 
 <script>
 
