Updated data to 06/10/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -110,6 +110,7 @@
 <script src=IntData_77.js></script>
 <script src=IntData_78.js></script>
 <script src=IntData_79.js></script>
+<script src=IntData_80.js></script>
 
 <script>
 
