--- a/covid19int.html
+++ b/covid19int.html
@@ -111,6 +111,7 @@
 <script src=IntData_78.js></script>
 <script src=IntData_79.js></script>
 <script src=IntData_80.js></script>
+<script src=IntData_81.js></script>
 
 <script>
 
