--- a/covid19usa.html
+++ b/covid19usa.html
@@ -67,6 +67,7 @@
 <script src=USAData_78.js></script>
 <script src=USAData_79.js></script>
 <script src=USAData_80.js></script>
+<script src=USAData_81.js></script>
 
 <script>
 
