Updated data to 06/12/2020 - can show entire state data now.

--- a/covid19int.html
+++ b/covid19int.html
@@ -112,6 +112,7 @@
 <script src=IntData_79.js></script>
 <script src=IntData_80.js></script>
 <script src=IntData_81.js></script>
+<script src=IntData_82.js></script>
 
 <script>
 
