--- a/covid19usa.html
+++ b/covid19usa.html
@@ -68,6 +68,7 @@
 <script src=USAData_79.js></script>
 <script src=USAData_80.js></script>
 <script src=USAData_81.js></script>
+<script src=USAData_82.js></script>
 
 <script>
 
