--- a/covid19int.html
+++ b/covid19int.html
@@ -113,6 +113,7 @@
 <script src=IntData_80.js></script>
 <script src=IntData_81.js></script>
 <script src=IntData_82.js></script>
+<script src=IntData_83.js></script>
 
 <script>
 
