--- a/covid19state.html
+++ b/covid19state.html
@@ -56,6 +56,7 @@
 <script src=USAData_80.js></script>
 <script src=USAData_81.js></script>
 <script src=USAData_82.js></script>
+<script src=USAData_83.js></script>
 
 <script>
 
