Updated data to 06/15/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -114,6 +114,7 @@
 <script src=IntData_81.js></script>
 <script src=IntData_82.js></script>
 <script src=IntData_83.js></script>
+<script src=IntData_84.js></script>
 
 <script>
 
