--- a/covid19state.html
+++ b/covid19state.html
@@ -57,6 +57,7 @@
 <script src=USAData_81.js></script>
 <script src=USAData_82.js></script>
 <script src=USAData_83.js></script>
+<script src=USAData_84.js></script>
 
 <script>
 
