--- a/covid19usa.html
+++ b/covid19usa.html
@@ -70,6 +70,7 @@
 <script src=USAData_81.js></script>
 <script src=USAData_82.js></script>
 <script src=USAData_83.js></script>
+<script src=USAData_84.js></script>
 
 <script>
 
