--- a/covid19int.html
+++ b/covid19int.html
@@ -115,6 +115,7 @@
 <script src=IntData_82.js></script>
 <script src=IntData_83.js></script>
 <script src=IntData_84.js></script>
+<script src=IntData_85.js></script>
 
 <script>
 
