--- a/covid19usa.html
+++ b/covid19usa.html
@@ -71,6 +71,7 @@
 <script src=USAData_82.js></script>
 <script src=USAData_83.js></script>
 <script src=USAData_84.js></script>
+<script src=USAData_85.js></script>
 
 <script>
 
