--- a/covid19int.html
+++ b/covid19int.html
@@ -116,6 +116,7 @@
 <script src=IntData_83.js></script>
 <script src=IntData_84.js></script>
 <script src=IntData_85.js></script>
+<script src=IntData_86.js></script>
 
 <script>
 
