--- a/covid19state.html
+++ b/covid19state.html
@@ -59,6 +59,7 @@
 <script src=USAData_83.js></script>
 <script src=USAData_84.js></script>
 <script src=USAData_85.js></script>
+<script src=USAData_86.js></script>
 
 <script>
 
