--- a/covid19usa.html
+++ b/covid19usa.html
@@ -72,6 +72,7 @@
 <script src=USAData_83.js></script>
 <script src=USAData_84.js></script>
 <script src=USAData_85.js></script>
+<script src=USAData_86.js></script>
 
 <script>
 
