--- a/covid19int.html
+++ b/covid19int.html
@@ -117,6 +117,7 @@
 <script src=IntData_84.js></script>
 <script src=IntData_85.js></script>
 <script src=IntData_86.js></script>
+<script src=IntData_87.js></script>
 
 <script>
 
