--- a/covid19state.html
+++ b/covid19state.html
@@ -60,6 +60,7 @@
 <script src=USAData_84.js></script>
 <script src=USAData_85.js></script>
 <script src=USAData_86.js></script>
+<script src=USAData_87.js></script>
 
 <script>
 
