--- a/covid19usa.html
+++ b/covid19usa.html
@@ -73,6 +73,7 @@
 <script src=USAData_84.js></script>
 <script src=USAData_85.js></script>
 <script src=USAData_86.js></script>
+<script src=USAData_87.js></script>
 
 <script>
 
