--- a/covid19int.html
+++ b/covid19int.html
@@ -118,6 +118,7 @@
 <script src=IntData_85.js></script>
 <script src=IntData_86.js></script>
 <script src=IntData_87.js></script>
+<script src=IntData_88.js></script>
 
 <script>
 
