--- a/covid19state.html
+++ b/covid19state.html
@@ -61,6 +61,7 @@
 <script src=USAData_85.js></script>
 <script src=USAData_86.js></script>
 <script src=USAData_87.js></script>
+<script src=USAData_88.js></script>
 
 <script>
 
