Updated data to 06/19/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -119,6 +119,7 @@
 <script src=IntData_86.js></script>
 <script src=IntData_87.js></script>
 <script src=IntData_88.js></script>
+<script src=IntData_89.js></script>
 
 <script>
 
