--- a/covid19state.html
+++ b/covid19state.html
@@ -62,6 +62,7 @@
 <script src=USAData_86.js></script>
 <script src=USAData_87.js></script>
 <script src=USAData_88.js></script>
+<script src=USAData_89.js></script>
 
 <script>
 
