--- a/covid19usa.html
+++ b/covid19usa.html
@@ -75,6 +75,7 @@
 <script src=USAData_86.js></script>
 <script src=USAData_87.js></script>
 <script src=USAData_88.js></script>
+<script src=USAData_89.js></script>
 
 <script>
 
