Updated data to 06/20/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -63,6 +63,7 @@
 <script src=USAData_87.js></script>
 <script src=USAData_88.js></script>
 <script src=USAData_89.js></script>
+<script src=USAData_90.js></script>
 
 <script>
 
