--- a/covid19int.html
+++ b/covid19int.html
@@ -120,6 +120,7 @@
 <script src=IntData_87.js></script>
 <script src=IntData_88.js></script>
 <script src=IntData_89.js></script>
+<script src=IntData_90.js></script>
 
 <script>
 
