--- a/covid19int.html
+++ b/covid19int.html
@@ -121,6 +121,7 @@
 <script src=IntData_88.js></script>
 <script src=IntData_89.js></script>
 <script src=IntData_90.js></script>
+<script src=IntData_91.js></script>
 
 <script>
 
