--- a/covid19usa.html
+++ b/covid19usa.html
@@ -77,6 +77,7 @@
 <script src=USAData_88.js></script>
 <script src=USAData_89.js></script>
 <script src=USAData_90.js></script>
+<script src=USAData_91.js></script>
 
 <script>
 
