Updated date to 06/22/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -122,6 +122,7 @@
 <script src=IntData_89.js></script>
 <script src=IntData_90.js></script>
 <script src=IntData_91.js></script>
+<script src=IntData_92.js></script>
 
 <script>
 
