--- a/covid19usa.html
+++ b/covid19usa.html
@@ -78,6 +78,7 @@
 <script src=USAData_89.js></script>
 <script src=USAData_90.js></script>
 <script src=USAData_91.js></script>
+<script src=USAData_92.js></script>
 
 <script>
 
