Updated date to 06/23/2020 - changed case and fatality maps to no longer use growing circles.. they were getting too large.

--- a/covid19int.html
+++ b/covid19int.html
@@ -123,6 +123,7 @@
 <script src=IntData_90.js></script>
 <script src=IntData_91.js></script>
 <script src=IntData_92.js></script>
+<script src=IntData_93.js></script>
 
 <script>
 
