--- a/covid19state.html
+++ b/covid19state.html
@@ -66,6 +66,7 @@
 <script src=USAData_90.js></script>
 <script src=USAData_91.js></script>
 <script src=USAData_92.js></script>
+<script src=USAData_93.js></script>
 
 <script>
 
