Updated data to 06/24/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -124,6 +124,7 @@
 <script src=IntData_91.js></script>
 <script src=IntData_92.js></script>
 <script src=IntData_93.js></script>
+<script src=IntData_94.js></script>
 
 <script>
 
