--- a/covid19usa.html
+++ b/covid19usa.html
@@ -80,6 +80,7 @@
 <script src=USAData_91.js></script>
 <script src=USAData_92.js></script>
 <script src=USAData_93.js></script>
+<script src=USAData_94.js></script>
 
 <script>
 
