--- a/covid19int.html
+++ b/covid19int.html
@@ -125,6 +125,7 @@
 <script src=IntData_92.js></script>
 <script src=IntData_93.js></script>
 <script src=IntData_94.js></script>
+<script src=IntData_95.js></script>
 
 <script>
 
