--- a/covid19usa.html
+++ b/covid19usa.html
@@ -81,6 +81,7 @@
 <script src=USAData_92.js></script>
 <script src=USAData_93.js></script>
 <script src=USAData_94.js></script>
+<script src=USAData_95.js></script>
 
 <script>
 
