Updated date to 06/26/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -126,6 +126,7 @@
 <script src=IntData_93.js></script>
 <script src=IntData_94.js></script>
 <script src=IntData_95.js></script>
+<script src=IntData_96.js></script>
 
 <script>
 
