--- a/covid19usa.html
+++ b/covid19usa.html
@@ -82,6 +82,7 @@
 <script src=USAData_93.js></script>
 <script src=USAData_94.js></script>
 <script src=USAData_95.js></script>
+<script src=USAData_96.js></script>
 
 <script>
 
